<resources>
    <string name="app_name">MicroLearn</string>
    <string name="portions">Daily portions</string>
    <string name="portion">Portion</string>
    <string name="portionName"><u>Portion Name</u></string>
    <string name="portionText">Portion Text</string>
    <string name="new_theme">New Theme</string>
    <string name="theme_topic">Topic</string>
    <string name="theme_area">Area</string>
    <string name="theme_name">Provided topic</string>
    <string name="theme_own">Your topic</string>
    <string name="theme_choose_label">Choose the topic or write the another one that you are interested in and we will see if we can provide it.</string>
    <string name="theme_time">Time of receiving a daily article</string>
    <string name="account">Account</string>
    <string name="show_underlined"><u>%s</u></string>
    <string name="back">Back</string>
    <string name="or">or</string>
    <string name="theme_commit_new">Commit new theme</string>
    <string name="favourite_facts">Favourite facts</string>
    <string name="studied_topics">Studied topics</string>
    <string name="themes">Themes</string>
    <string name="settings">Settings</string>
    <string name="portion_archive">Portion Archive</string>
    <string name="support">Support</string>
    <string name="add">ADD</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="other">Other</string>
    <string name="image_of_user">Image of user</string>
    <string name="user_name">User name</string>
    <string name="thanks_for_studying_with_us">Thanks for studying with us</string>
    <string name="my_account">My account</string>
    <string name="log_in">Log In</string>
    <string name="choose_area">Choose area</string>
    <string name="your_theme">Your theme</string>
    <string name="choose_a_topic">Choose a topic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>