<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/portions"
            android:icon="@drawable/article_black"
            android:title="@string/portions" />

        <item
            android:id="@+id/user"
            android:icon="@drawable/account_black"
            android:title="@string/my_account" />

        <item
            android:id="@+id/studied_topics"
            android:icon="@drawable/topic_black"
            android:title="@string/studied_topics" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings_black"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/support"
                android:icon="@drawable/help_black"
                android:title="@string/support" />

            <item
                android:id="@+id/login_out"
                android:icon="@drawable/login"
                android:title="@string/log_in" />
        </menu>
    </item>

</menu>