<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ThemeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_blue"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/themeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/theme_choose_label"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/areaName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/theme_area"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    tools:ignore="TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/areaSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:outlineProvider="paddedBounds"
                    android:contentDescription="@string/choose_area"/>

                <TextView
                    android:id="@+id/themeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/theme_name"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    tools:ignore="TouchTargetSizeCheck" />

                <Spinner
                    android:id="@+id/themeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:outlineProvider="paddedBounds"
                    android:contentDescription="@string/choose_a_topic"/>

                <TextView
                    android:id="@+id/or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="22sp"
                    android:typeface="sans"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/themeOwn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/theme_own"
                    android:textColor="@color/black"
                    android:textIsSelectable="true"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/editTheme"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/your_theme" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/commitTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/theme_commit_new"
                    app:backgroundTint="@color/main_green"
                    app:rippleColor="@color/white"
                    app:srcCompat="@android:drawable/ic_menu_send" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>