<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.UserActivity">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_navigation"
        app:menu="@menu/menu_side_navigation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_blue"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/image_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_of_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout4"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/image_user"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout4" />

        <TextView
            android:id="@+id/thanks_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/thanks_for_studying_with_us"
            app:layout_constraintStart_toEndOf="@+id/image_user"
            app:layout_constraintTop_toBottomOf="@+id/name_user" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>